--- a/spec/support/docker/Dockerfile.alpine
+++ b/spec/support/docker/Dockerfile.alpine
@@ -34,7 +34,7 @@ ENV XDG_DATA_HOME=$DEPS_DIR/XDG_DATA_HOME
 WORKDIR $DEPS_DIR
 
 COPY --from=build-pt /go/bin/pt $BIN_DIR/pt
-COPY Gemfile* spec/support/setup/* spec/support/docker/docker-entrypoint.sh $DEPS_DIR/
+COPY Gemfile* spec/support/provision spec/support/docker/docker-entrypoint.sh $DEPS_DIR/
 
 RUN set -eux; \
 # Runtime dependencies
@@ -53,9 +53,7 @@ RUN set -eux; \
 # Clearly an antipattern, but we have to be able to reuse this scripts for
 # various builds including different base images, different platforms and
 # travis-ci, so it's an acceptable trade-off
-    sh install_vim_dependencies.sh $PLUGINS_DIR; \
-    INSTALL='vim-global,neovim-local:default,ack-global,ag-global,rg-local:default' \
-      sh install_linux_dependencies.sh $BIN_DIR; \
+    sh alpine.sh $BIN_DIR $PLUGINS_DIR; \
 # Temprorary fix for neovim .appimage which is not working under alpine distro so far
     apk add --no-cache neovim; \
     mkdir -p $BIN_DIR/squashfs-root/usr/bin; ln -s /usr/bin/nvim $BIN_DIR/squashfs-root/usr/bin/nvim; \
@@ -70,5 +68,5 @@ RUN set -eux; \
     yes | pip3 uninstall pip;
 
 WORKDIR $APP_DIR
-ENTRYPOINT ["/app/spec/support/docker/docker-entrypoint.sh"]
+ENTRYPOINT ["/deps/docker-entrypoint.sh"]
 CMD ["sh"]
