fix search utils abortion specs, refactoring

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -54,3 +54,6 @@ Style/ClassAndModuleChildren:
 Layout/HashAlignment:
   EnforcedColonStyle: table
   EnforcedHashRocketStyle: table
+
+Layout/SpaceInsideHashLiteralBraces:
+  EnforcedStyle: no_space
