--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -43,7 +43,6 @@ AllCops:
   Exclude:
     - 'spec/support/**/brew_formulae/**/*'
     - 'spec/support/bin/**/*'
-    - 'spec/support/helpers/file_system.rb' # args forwarding is not implemented in rubocop yet
 
 Style/ClassAndModuleChildren:
   EnforcedStyle: compact
@@ -53,3 +52,7 @@ Style/ClassAndModuleChildren:
 
 Layout/HashAlignment:
   EnforcedColonStyle: table
+  EnforcedHashRocketStyle: table
+
+Layout/SpaceInsideHashLiteralBraces:
+  EnforcedStyle: no_space
