--- a/spec/support/docker/Dockerfile.alpine
+++ b/spec/support/docker/Dockerfile.alpine
@@ -40,7 +40,7 @@ COPY Gemfile* spec/support/provision spec/support/docker/docker-entrypoint.sh $D
 
 RUN set -eux; \
 # Runtime dependencies
-    apk add --update --no-cache xvfb python3 git ragel $DEBUG_PACKAGES; \
+    apk add --update --no-cache xvfb python3 git $DEBUG_PACKAGES; \
 # Build dependencies
     apk add --no-cache --virtual .builddeps gcc python3-dev musl-dev make wget tar; \
 # Python dependencies
@@ -49,7 +49,7 @@ RUN set -eux; \
     echo 'gem: --no-document' >> /etc/gemrc; \
     gem install bundler; \
     bundle config set no-cache 'true'; \
-    bundle config set frozen 'true'; \
+    # bundle config set frozen 'true'; \
     bundle install; \
 # OS dependencies
 # Clearly an antipattern, but we have to be able to reuse this scripts for
