--- a/.travis.yml
+++ b/.travis.yml
@@ -90,38 +90,38 @@ jobs:
     #   - underlying backends (mostly vimproc) rely platform specific calls
     # OSX acceptance
     - name: 'Acceptance tests of #backend#system'
-      script: bundle exec rspec --tag system
+      script: bundle exec rake RSPEC_OPTS='--tag system'
       os: osx
     # - name: 'Acceptance tests of #backend#nvim'
-    #   script: bundle exec rspec --tag nvim --seed 6880
+    #   script: bundle exec rake RSPEC_OPTS='--tag nvim' --seed 6880
     #   env: INSTALL_PYTHON_VERSION=3.6.1 NVIM_GUI=0
     #   os: osx
     - name: 'Acceptance tests of #backend#vim8'
-      script: bundle exec rspec --tag vim8
+      script: bundle exec rake RSPEC_OPTS='--tag vim8'
       os: osx
     - name: 'Acceptance tests of #backend#vimproc'
-      script: bundle exec rspec --tag vimproc
+      script: bundle exec rake RSPEC_OPTS='--tag vimproc'
       os: osx
 
     # Linux acceptance
     - name: 'Acceptance tests of #backend#system'
-      script: bundle exec rspec --tag system
+      script: bundle exec rake RSPEC_OPTS='--tag system'
       os: linux
     - name: 'Acceptance tests of #backend#nvim'
-      script: spec/support/docker/rspec -t nvim
+      script: spec/support/docker/rake RSPEC_OPTS='--tag nvim'
       env: NVIM_GUI=0 DOCKER_BUILD=1
       services: docker
       os: linux
     - name: 'Acceptance tests of #backend#vim8'
-      script: bundle exec rspec --tag vim8
+      script: bundle exec rake RSPEC_OPTS='--tag vim8'
       os: linux
     - name: 'Acceptance tests of #backend#vimproc'
-      script: bundle exec rspec --tag vimproc
+      script: bundle exec rake RSPEC_OPTS='--tag vimproc'
       os: linux
 
     # Unit tests
     - name: 'Unit tests'
-      script: bundle exec rspec --tag ~backend
+      script: bundle exec rake RSPEC_OPTS='--tag ~backend'
       os: linux
 
     # Linters
