--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -56,3 +56,18 @@ Layout/HashAlignment:
 
 Layout/SpaceInsideHashLiteralBraces:
   EnforcedStyle: no_space
+
+### Parser specs
+Style/PercentQLiterals:
+  Exclude:
+    - 'spec/lib/viml_value/*_spec.rb'
+Style/RedundantPercentQ: # to preserve alignment
+  Exclude:
+    - 'spec/lib/viml_value/*_spec.rb'
+Style/PercentLiteralDelimiters:
+  PreferredDelimiters:
+    '%q':    '||'
+    '%Q':    '||'
+  Include:
+    - 'spec/lib/viml_value/*_spec.rb'
+
