--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -43,6 +43,8 @@ AllCops:
   Exclude:
     - 'spec/support/**/brew_formulae/**/*'
     - 'spec/support/bin/**/*'
+    - 'spec/support/lib/viml_value/parser.rb'
+    - 'spec/support/lib/viml_value/lexer.rb'
 
 Style/ClassAndModuleChildren:
   EnforcedStyle: compact
@@ -56,3 +58,21 @@ Layout/HashAlignment:
 
 Layout/SpaceInsideHashLiteralBraces:
   EnforcedStyle: no_space
+
+### Parser specs
+# use %q|| instead of %q() to simplify escaping testing
+Style/PercentQLiterals:
+  Exclude:
+    - 'spec/lib/viml_value/*_spec.rb'
+    - 'spec/lib/viml_value_spec.rb'
+Style/RedundantPercentQ: # to preserve alignments
+  Exclude:
+    - 'spec/lib/viml_value/*_spec.rb'
+    - 'spec/lib/viml_value_spec.rb'
+Style/PercentLiteralDelimiters:
+  PreferredDelimiters:
+    '%q':    '||'
+    '%Q':    '||'
+  Include:
+    - 'spec/lib/viml_value/*_spec.rb'
+    - 'spec/lib/viml_value_spec.rb'
