fix missing nvr executable

--- a/.travis.yml
+++ b/.travis.yml
@@ -122,12 +122,15 @@ jobs:
     - name: 'Acceptance tests of #backend#vimproc'
       script: bundle exec rake RSPEC_OPTS='--tag vimproc'
       os: linux
+
     - name: 'Acceptance tests of adapter'
       script: bundle exec rake RSPEC_OPTS='--tag adapter'
+      env: NVIM_GUI=0 DOCKER_BUILD=1
       os: linux
 
     - name: 'Acceptance tests of commandline'
       script: bundle exec rake RSPEC_OPTS='--tag commandline'
+      env: NVIM_GUI=0 DOCKER_BUILD=1
       os: linux
 
     # Unit tests
