--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -37,6 +37,7 @@ Lint/AmbiguousBlockAssociation:
   Exclude:
     - 'spec/**/*_spec.rb'
     - 'spec/spec_helper.rb'
+    - 'spec/support/helpers/**/*.rb'
     - 'spec/**/shared_examples/*.rb'
 
 Layout/FirstArrayElementIndentation:
