--- a/.travis.yml
+++ b/.travis.yml
@@ -68,6 +68,8 @@ install:
       sh spec/support/provision/debian.sh "$TRAVIS_BUILD_DIR/spec/support/bin" "$TRAVIS_BUILD_DIR/spec/support/vim_plugins"
     fi
 
+    bundle exec rake generate_lexer generate_parser
+
 before_script:
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then (( sudo Xvfb :99 -ac -screen 0 1024x768x8; echo ok) &); sleep 5; fi
     # - if [ "$TRAVIS_OS_NAME" = "linux" ]; then DISPLAY=":99.0" sh -e /etc/init.d/xvfb start; sleep 5 fi
@@ -103,15 +105,25 @@ jobs:
       script: bundle exec rake RSPEC_OPTS='--tag vimproc'
       os: osx
 
+      # Although travis has less cores than 4, it's better for splitting as
+      # groups with even execution time cannot be precisely determined using files size
+    - name: 'Acceptance tests of window output 1'
+      script: bundle exec parallel_test spec/plugin/window -n 8 --only-group 1,2,3,4 --group-by filesize --type rspec
+      os: linux
+    - name: 'Acceptance tests of window output 2'
+      script: bundle exec parallel_test spec/plugin/window -n 8 --only-group 5,6,7,8 --group-by filesize --type rspec
+      os: linux
+
     # Linux acceptance
     - name: 'Acceptance tests of #backend#system'
       script: bundle exec rake RSPEC_OPTS='--tag system'
       os: linux
-    - name: 'Acceptance tests of #backend#nvim'
-      script: spec/support/docker/rake RSPEC_OPTS='--tag neovim'
-      env: NVIM_GUI=0 DOCKER_BUILD=1
-      services: docker
-      os: linux
+    #  TODO
+    # - name: 'Acceptance tests of #backend#nvim'
+    #   script: spec/support/docker/rake RSPEC_OPTS='--tag neovim'
+    #   env: NVIM_GUI=0 DOCKER_BUILD=1
+    #   services: docker
+    #   os: linux
     - name: 'Acceptance tests of #backend#vim8'
       script: bundle exec rake RSPEC_OPTS='--tag vim8'
       os: linux
@@ -119,13 +131,21 @@ jobs:
       script: bundle exec rake RSPEC_OPTS='--tag vimproc'
       os: linux
 
-    # Unit tests
-    - name: 'Unit tests'
-      script: spec/support/docker/rake RSPEC_OPTS='--tag ~backend'
-      env: NVIM_GUI=0 DOCKER_BUILD=1
+    - name: 'Acceptance tests of adapter'
+      script: bundle exec rake RSPEC_OPTS='--tag adapters'
       os: linux
 
-    # Linters
+    - name: 'Acceptance tests of commandline'
+      script: bundle exec rake RSPEC_OPTS='--tag commandline'
+      os: linux
+
+      # Although travis has less cores than 4, it's better for splitting as
+      # groups with even execution time cannot be precisely determined using files size
+    - name: 'Unit tests'
+      script: bundle exec parallel_test spec/unit -n 4 --group-by filesize --type rspec
+      os: linux
+
+    # Linters TODO merge into a single build
     - name: 'Ruby and support shell files lint (Rubocop, shellcheck)'
       env: LINT_FOR=ruby SKIP_INSTALL_VIM_DEPENDENCIES=1
       script:
