--- a/.travis.yml
+++ b/.travis.yml
@@ -92,31 +92,31 @@ jobs:
     #   - underlying backends (mostly vimproc) rely platform specific calls
     # OSX acceptance
     - name: 'Acceptance tests of #backend#system'
-      script: bundle exec rake RSPEC_OPTS='--tag system'
+      script: PARALLEL_SPLIT_TEST_PROCESSES=2 bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag system
       os: osx
     # - name: 'Acceptance tests of #backend#nvim'
-    #   script: bundle exec rake RSPEC_OPTS='--tag nvim' --seed 6880
+    #   script: PARALLEL_SPLIT_TEST_PROCESSES=2 bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag nvim' --seed 6880
     #   env: INSTALL_PYTHON_VERSION=3.6.1 NVIM_GUI=0
     #   os: osx
     - name: 'Acceptance tests of #backend#vim8'
-      script: bundle exec rake RSPEC_OPTS='--tag vim8'
+      script: PARALLEL_SPLIT_TEST_PROCESSES=2 bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vim8
       os: osx
     - name: 'Acceptance tests of #backend#vimproc'
-      script: bundle exec rake RSPEC_OPTS='--tag vimproc'
+      script: PARALLEL_SPLIT_TEST_PROCESSES=2 bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vimproc
       os: osx
 
       # Although travis has less cores than 4, it's better for splitting as
       # groups with even execution time cannot be precisely determined using files size
     - name: 'Acceptance tests of window output 1'
-      script: bundle exec parallel_test spec/plugin/window -n 8 --only-group 1,2,3,4 --group-by filesize --type rspec
+      script: bundle exec parallel_test spec/plugin/window -n 8 --only-group 1,2,5,6 --group-by filesize --type rspec
       os: linux
     - name: 'Acceptance tests of window output 2'
-      script: bundle exec parallel_test spec/plugin/window -n 8 --only-group 5,6,7,8 --group-by filesize --type rspec
+      script: bundle exec parallel_test spec/plugin/window -n 8 --only-group 3,4,7,8 --group-by filesize --type rspec
       os: linux
 
     # Linux acceptance
     - name: 'Acceptance tests of #backend#system'
-      script: bundle exec rake RSPEC_OPTS='--tag system'
+      script: PARALLEL_SPLIT_TEST_PROCESSES=2 bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag system
       os: linux
     #  TODO
     # - name: 'Acceptance tests of #backend#nvim'
@@ -125,10 +125,10 @@ jobs:
     #   services: docker
     #   os: linux
     - name: 'Acceptance tests of #backend#vim8'
-      script: bundle exec rake RSPEC_OPTS='--tag vim8'
+      script: PARALLEL_SPLIT_TEST_PROCESSES=2 bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vim8
       os: linux
     - name: 'Acceptance tests of #backend#vimproc'
-      script: bundle exec rake RSPEC_OPTS='--tag vimproc'
+      script: PARALLEL_SPLIT_TEST_PROCESSES=2 bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vimproc
       os: linux
 
     - name: 'Acceptance tests of adapter'
