--- a/.travis.yml
+++ b/.travis.yml
@@ -93,7 +93,7 @@ jobs:
     #   - underlying backends (mostly vimproc) rely platform specific calls
     # OSX acceptance
     - name: 'Acceptance tests of #backend#system'
-      script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag system
+      script: bundle exec rspec spec/plugin/backend_spec.rb --tag system
       os: osx
     # - name: 'Acceptance tests of #backend#nvim'
     #   script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag nvim' --seed 6880
