--- a/.travis.yml
+++ b/.travis.yml
@@ -118,9 +118,12 @@ jobs:
       script: bundle exec parallel_test spec/plugin/window/syntax spec/plugin/window/modifiable -n 8 --only-group 3,4,7,8 --group-by filesize --type rspec
       os: linux
     - name: 'Acceptance tests of window output 3'
-      script: bundle exec parallel_split_test ./spec/plugin/window/modifiable_columnwise_spec.rb
+      script: bundle exec parallel_split_test ./spec/plugin/window/modifiable_columnwise/within_single_context_spec.rb
       os: linux
     - name: 'Acceptance tests of window output 4'
+      script: bundle exec parallel_split_test ./spec/plugin/window/modifiable_columnwise/across_multiple_contexts_spec.rb
+      os: linux
+    - name: 'Acceptance tests of window output 5'
       script: bundle exec parallel_split_test ./spec/plugin/window/modifiable_linewise_spec.rb
       os: linux
 
