--- a/.travis.yml
+++ b/.travis.yml
@@ -115,7 +115,7 @@ jobs:
       script: bundle exec parallel_test spec/plugin/window/syntax spec/plugin/window/modifiable -n 2 --group-by filesize --type rspec
       os: linux
     - name: 'Acceptance tests of window output 2'
-      script: bundle exec parallel_split_test ./spec/plugin/window/modifiable_columnwise/within_single_context_spec.rb
+      script: bundle exec parallel_split_test ./spec/plugin/window/modifiable_columnwise/within_single_context_spec.rb ./spec/plugin/compatibility/visual_multi_spec.rb
       os: linux
     - name: 'Acceptance tests of window output 3'
       script: bundle exec parallel_split_test ./spec/plugin/window/modifiable_columnwise/across_multiple_contexts_spec.rb
