--- a/.travis.yml
+++ b/.travis.yml
@@ -103,12 +103,8 @@ jobs:
     #   env: INSTALL_PYTHON_VERSION=3.6.1 NVIM_GUI=0
     #   os: osx
     - name: 'Acceptance tests of #backend#vim8 with #viml render'
-      script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vim8 --tag ~render_lua
+      script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vim8 --tag ~lua_render
       os: osx
-    # TODO
-    # - name: 'Acceptance tests of #backend#vim8 with #lua render'
-    #   script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vim8 --tag ~render_viml
-    #   os: osx
     # - name: 'Acceptance tests of #backend#vimproc'
     #   script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vimproc
     #   os: osx
@@ -138,8 +134,11 @@ jobs:
     #   env: NVIM_GUI=0 DOCKER_BUILD=1
     #   services: docker
     #   os: linux
-    - name: 'Acceptance tests of #backend#vim8'
-      script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vim8
+    - name: 'Acceptance tests of #backend#vim8 with #viml render'
+      script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vim8 --tag ~lua_render
+      os: linux
+    - name: 'Acceptance tests of #backend#vim8 with #lua render'
+      script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vim8 --tag ~viml_render
       os: linux
     - name: 'Acceptance tests of #backend#vimproc'
       script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vimproc
