--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /spec/fixtures
 !/spec/fixtures/.keep
 !/spec/fixtures/manual
-# TODO legacy
+# TODO legacy tests
 !/spec/fixtures/relative_paths
 /spec/support/bin
 !/spec/support/bin/.keep
