--- a/.travis.yml
+++ b/.travis.yml
@@ -70,6 +70,7 @@ install:
     fi
 
     bundle exec rake generate_lexer generate_parser
+    git config --global core.precomposeunicode true  ; git config --global core.quotePath false
 
 before_script:
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then (( sudo Xvfb :99 -ac -screen 0 1024x768x8; echo ok) &); sleep 5; fi
@@ -135,10 +136,10 @@ jobs:
     #   services: docker
     #   os: linux
     - name: 'Acceptance tests of #backend#vim8 with #viml render'
-      script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vim8 --tag ~lua_render
+      script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vim8 --tag ~render:lua
       os: linux
     - name: 'Acceptance tests of #backend#vim8 with #lua render'
-      script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vim8 --tag ~viml_render
+      script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vim8 --tag ~render:viml
       os: linux
     - name: 'Acceptance tests of #backend#vimproc'
       script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vimproc
