--- a/.travis.yml
+++ b/.travis.yml
@@ -130,11 +130,8 @@ jobs:
     #   env: NVIM_GUI=0 DOCKER_BUILD=1
     #   services: docker
     #   os: linux
-    - name: 'Acceptance tests of #backend#vim8 with #viml render and #getqflist parser'
-      script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vim8 --tag ~render:lua --tag ~parse:legacy
-      os: linux
     - name: 'Acceptance tests of #backend#vim8 with #viml render and #legacy parser'
-      script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vim8 --tag ~render:lua --tag ~parse:getqflist
+      script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vim8 --tag ~render:lua
       os: linux
     - name: 'Acceptance tests of #backend#vim8 with #lua render'
       script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vim8 --tag ~render:viml
