--- a/.travis.yml
+++ b/.travis.yml
@@ -58,10 +58,12 @@ install:
       pip3 --version
     fi
 
-    [ "$LINT_FOR" = viml ] && pip3 install vim-vint==0.3.21 && return
-    [ "$LINT_FOR" = ruby ] && bundle install && return
-
     bundle install
+
+    if [ "$LINT" = 1 ]; then
+      pip3 install vim-vint==0.3.21
+      sudo luarocks install luacheck
+    fi
 
     if [ "$TRAVIS_OS_NAME" = "osx" ]; then
       sh spec/support/provision/osx.sh "$TRAVIS_BUILD_DIR/spec/support/bin" "$TRAVIS_BUILD_DIR/spec/support/vim_plugins"
@@ -156,22 +158,13 @@ jobs:
 
     # Linters TODO merge into a single build
     - name: 'Ruby and support shell files lint (Rubocop, shellcheck)'
-      env: LINT_FOR=ruby SKIP_INSTALL_VIM_DEPENDENCIES=1
+      env: LINT=ruby SKIP_INSTALL_VIM_DEPENDENCIES=1 VIML_DIRECTORIES='autoload/esearch/ autoload/esearch.vim nerdtree_plugin plugin syntax'
       script:
         - bundle exec rubocop --display-cop-names
         - spec/support/docker/shellcheck
-      os: linux
-    - name: 'Viml lint (Vint, VimLint)'
-      env:
-        LINT_FOR=viml
-        SKIP_INSTALL_VIM_DEPENDENCIES=1
-        VIML_DIRECTORIES='autoload/esearch/ autoload/esearch.vim nerdtree_plugin plugin syntax'
-      before_script:
-        - git clone https://github.com/syngan/vim-vimlint /tmp/vim-vimlint
-        - git clone https://github.com/ynkdir/vim-vimlparser /tmp/vim-vimlparser
-      script:
-        - sh "spec/support/scripts/vimlint.sh" /tmp/vim-vimlint /tmp/vim-vimlparser $VIML_DIRECTORIES
         - "vint $VIML_DIRECTORIES"
+        - luacheck lua/
+      os: linux
       language: python
       python: 3.7 # From logs: The `pip3' command exists in these Python versions: 3.6.7, 3.7, 3.7.1
       os: linux
