--- a/.travis.yml
+++ b/.travis.yml
@@ -62,6 +62,7 @@ install:
 
     if [ "$LINT" = 1 ]; then
       pip3 install vim-vint==0.3.21
+      sudo apt-get install -y luarocks
       sudo luarocks install luacheck
     fi
 
@@ -110,7 +111,9 @@ jobs:
       # Although travis has less cores than 4, it's better for splitting as
       # groups with even execution time cannot be precisely determined using files size
     - name: 'Acceptance tests of window output 1'
-      script: bundle exec parallel_test spec/plugin/window/syntax spec/plugin/window/modifiable -n 2 --group-by filesize --type rspec
+      script:
+        - bundle exec parallel_test spec/plugin/window/syntax -n 2 --group-by filesize --type rspec
+        - bundle exec parallel_test spec/plugin/window/modifiable -n 2 --group-by filesize --type rspec
       os: linux
     - name: 'Acceptance tests of window output 2'
       script: bundle exec parallel_split_test ./spec/plugin/window/modifiable_columnwise/within_single_context_spec.rb ./spec/plugin/compatibility/visual_multi_spec.rb
