--- a/.travis.yml
+++ b/.travis.yml
@@ -94,16 +94,16 @@ jobs:
   include:
     # parallel_split_test cause deadlocks on mac, so testing
     # synchronously
-    - name: 'Acceptance tests of #backend#system'
-      script: bundle exec rspec spec/plugin/backend_spec.rb --tag system
-      os: osx
+    # - name: 'Acceptance tests of #backend#system'
+    #   script: bundle exec rspec spec/plugin/backend_spec.rb --tag system
+    #   os: osx
     # - name: 'Acceptance tests of #backend#nvim'
     #   script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag nvim' --seed 6880
     #   env: INSTALL_PYTHON_VERSION=3.6.1 NVIM_GUI=0
     #   os: osx
-    - name: 'Acceptance tests of #backend#vim8 with #viml render'
-      script: bundle exec rspec spec/plugin/backend_spec.rb --tag vim8 --tag ~render:lua
-      os: osx
+    # - name: 'Acceptance tests of #backend#vim8 with #viml render'
+    #   script: bundle exec rspec spec/plugin/backend_spec.rb --tag vim8 --tag ~render:lua
+    #   os: osx
     # - name: 'Acceptance tests of #backend#vimproc'
     #   script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vimproc
     #   os: osx
