--- a/.travis.yml
+++ b/.travis.yml
@@ -83,6 +83,7 @@ before_script:
   - ls -lah "$TRAVIS_BUILD_DIR/spec/support/bin"
   - ls -lah "$TRAVIS_BUILD_DIR/spec/support/vim_plugins"
   - |
+    vim --version || true
     ack --help || true
     ag --help || true
     grep --help || true
