--- a/.travis.yml
+++ b/.travis.yml
@@ -107,7 +107,7 @@ jobs:
     #   os: osx
 
     - name: 'Acceptance tests of #backend#system'
-      script: bundle exec parallel_split_test spec/plugin/backend/ --tag system
+      script: bundle exec parallel_test spec/plugin/backend/ -o '--tag system' --type rspec
       os: linux
     #  TODO
     # - name: 'Acceptance tests of #backend#nvim'
@@ -116,10 +116,10 @@ jobs:
     #   services: docker
     #   os: linux
     - name: 'Acceptance tests of #backend#vim8 with #viml render and #legacy parser'
-      script: bundle exec parallel_split_test spec/plugin/backend/ --tag vim8 --tag ~render:lua
+      script: bundle exec parallel_test spec/plugin/backend/ -o '--tag vim8 --tag ~render:lua' --type rspec
       os: linux
     - name: 'Acceptance tests of #backend#vim8 with #lua render'
-      script: bundle exec parallel_split_test spec/plugin/backend/ --tag vim8 --tag ~render:viml
+      script: bundle exec parallel_test spec/plugin/backend/ -o '--tag vim8 --tag ~render:viml' --type rspec
       os: linux
 
     - name: 'Acceptance tests of adapter'
@@ -129,7 +129,7 @@ jobs:
       script: bundle exec rake RSPEC_OPTS='--tag commandline'
       os: linux
     - name: 'Unit tests'
-      script: bundle exec parallel_test spec/unit -n 2 --group-by filesize --type rspec
+      script: bundle exec parallel_test spec/unit -n 2 --type rspec
       os: linux
     - name: 'Linters (luacheck, rubocop, vint, shellcheck)'
       env: LINT=1 INSTALL_PYTHON_VERSION=3.6.1
