--- a/.travis.yml
+++ b/.travis.yml
@@ -107,7 +107,7 @@ jobs:
     #   os: osx
 
     - name: 'Acceptance tests of #backend#system'
-      script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag system	
+      script: bundle exec parallel_split_test spec/plugin/backend --tag system	
       os: linux
     #  TODO
     # - name: 'Acceptance tests of #backend#nvim'
@@ -116,10 +116,10 @@ jobs:
     #   services: docker
     #   os: linux
     - name: 'Acceptance tests of #backend#vim8 with #viml render and #legacy parser'
-      script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vim8 --tag ~render:lua	
+      script: bundle exec parallel_split_test spec/plugin/backend --tag vim8 --tag ~render:lua	
       os: linux
     - name: 'Acceptance tests of #backend#vim8 with #lua render'
-      script: bundle exec parallel_split_test spec/plugin/backend_spec.rb --tag vim8 --tag ~render:viml	
+      script: bundle exec parallel_split_test spec/plugin/backend --tag vim8 --tag ~render:viml	
       os: linux
 
     - name: 'Acceptance tests of adapter'
