--- a/.travis.yml
+++ b/.travis.yml
@@ -96,11 +96,14 @@ jobs:
     - name: 'Acceptance tests of #backend#system'
       script: bundle exec parallel_split_test spec/plugin/backend/ --tag system	
       os: linux
-    - name: 'Acceptance tests of #backend#vim8 with #viml render and #legacy parser'
+    - name: 'Acceptance tests of #backend#vim8 patterns'
       script: bundle exec parallel_split_test spec/plugin/backend/patterns_spec.rb --tag vim8
       os: linux
-    - name: 'Acceptance tests of #backend#vim8 with #lua render'
-      script: bundle exec parallel_split_test spec/plugin/backend/paths_spec.rb --tag vim8
+    - name: 'Acceptance tests of #backend#vim8 paths with #viml legacy render'
+      script: bundle exec parallel_split_test spec/plugin/backend/paths_spec.rb --tag vim8 --tag ~render:lua
+      os: linux
+    - name: 'Acceptance tests of #backend#vim8 paths with #lua render'
+      script: bundle exec parallel_split_test spec/plugin/backend/paths_spec.rb --tag vim8 --tag ~render:viml
       os: linux
 
     - name: 'Acceptance tests adapter and modifiable features'
