--- a/.travis.yml
+++ b/.travis.yml
@@ -93,8 +93,11 @@ before_script:
 
 jobs:
   include:
-    - name: 'Acceptance tests of #backend#system'
-      script: bundle exec parallel_split_test spec/plugin/backend/ --tag system	
+    - name: 'Acceptance tests of #backend#system patterns'
+      script: bundle exec parallel_split_test spec/plugin/backend/patterns_spec.rb --tag system --tag ~render:viml
+      os: linux
+    - name: 'Acceptance tests of #backend#system paths'
+      script: bundle exec parallel_split_test spec/plugin/backend/paths_spec.rb --tag system	--tag ~render:viml
       os: linux
     - name: 'Acceptance tests of #backend#vim8 patterns'
       script: bundle exec parallel_split_test spec/plugin/backend/patterns_spec.rb --tag vim8
